# tui-wifi

./: .black-autoformat-trigger  .gitignore  .nmcli-frequency-fix-trigger  .rename-command-trigger  .ruff-diagnostic-trigger  CHANGELOG.md  CI_DIAGNOSTICS.txt  CI_FAILURES.txt  CI_VERIFICATION.txt  CONTRIBUTING.md  FULL_CI_RESULTS.md  LICENSE  PYTHON310_DIAGNOSTICS.txt  PYTHON310_FINAL_DIAGNOSTICS.txt  README.md  STRICT_DIAGNOSTICS.txt  STRICT_GATE_RESULTS.txt  pyproject.toml
.github/: ci-debug-trigger  ci-verify-trigger  final_lint_fixes.py  lint_repair.py  lint_repair_round2.py  networkmanager-136-finalize.txt  networkmanager-136-tree.json  publish-python310-trigger  python310-compat-trigger  python310-diagnostic-final-trigger  python310-final-trigger  unit-tests1-trigger
.github/unit-tests1-payload/: chunk-00  chunk-01  chunk-02  chunk-03  chunk-04
.github/workflows/: black-autoformat.yml  ci-autofix.yml  ci-debug-once.yml  ci-diagnostics.yml  ci-verify-once.yml  ci.yml  copyright-format.yml  final-ci-diagnostics.yml  final-lint-fixes.yml  final-semantic-fix.yml  full-ci-audit.yml  lint-repair-round2.yml  lint-repair.yml  nmcli-frequency-fix.yml  profile-test-fix.yml  publish-python310.yml  python310-compat.yml  python310-diagnostic-final.yml  python310-diagnostic.yml  python310-final.yml  rename-command.yml  ruff-diagnostic.yml  strict-gate-audit.yml  temporary-autofix.yml  temporary-test-diagnostics.yml  ui-test-fixes.yml  unit-tests1-ralph.yml
docs/: ARCHITECTURE.md  RUFF_DIAGNOSTIC.txt  SECURITY.md  SPEC.md  TODO.md  TOOD.md  TROUBLESHOOTING.md  UNIT_TESTS1_TODO.md
scripts/: __init__.py  check_critical_coverage.py  systematic_lint_fix.py
src/tui_wifi/: __init__.py  __main__.py  app.py  cli.py  compat.py  errors.py  grouping.py  logging_config.py  models.py  secrets.py
src/tui_wifi/backends/: __init__.py  base.py  fake.py  nmcli.py  nmcli_core.py  nmcli_mutations.py  nmcli_profiles.py  nmcli_profiles_tmp.py  parsing.py  parsing_tmp.py
src/tui_wifi/process/: __init__.py  fake.py  runner.py
src/tui_wifi/services/: __init__.py  wifi.py
src/tui_wifi/ui/: __init__.py  tui_wifi.tcss
src/tui_wifi/ui/dialogs/: __init__.py  common.py
src/tui_wifi/ui/screens/: __init__.py  details.py  main.py  saved.py
src/tui_wifi/ui/widgets/: __init__.py  network_list.py
tests/: __init__.py  assertions.py  conftest.py  factories.py  nmcli_fixtures.py
tests/fixtures/nmcli/: README.md
tests/integration/: __init__.py  test_fake_nmcli_executable.py
tests/manual/: V01_ACCEPTANCE.md
tests/tui/: __init__.py  helpers.py  test_app.py  test_dialogs.py  test_main_screen.py  test_saved_screen.py
tests/unit/: __init__.py  test_cli.py  test_compat.py  test_critical_coverage.py  test_errors.py  test_grouping.py  test_logging.py  test_nmcli.py  test_nmcli_mutations.py  test_nmcli_mutations_verification.py  test_nmcli_networkmanager_136.py  test_nmcli_profiles.py  test_nmcli_radio.py  test_nmcli_scan.py  test_parsing.py  test_process.py  test_secrets.py  test_service.py  test_service_branches.py  test_service_concurrency.py
